--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/commonmark": "^0.27.9",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -50,6 +51,7 @@
     "eslint-config-next": "15.2.1",
     "eslint-config-prettier": "^10.0.3",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
